styles.css
/* ... */
@media(max-width: 768px) {
    .menu-toggle {
        display: flex;
    }


    .nav-links {
        position: fixed;
        right: -100%;
        top: 70px;
        flex-direction: column;
        background-color: #092143;
        width: 80%;
        max-width: 300px;
        text-align: center;
        transition: 0.3s;
        box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
        padding: 20px;
        border-radius: 10px 0 0 10px;

    
    button {
        background-color: rgba(255, 255, 255, 0.8);
        border: none;
        border-radius: 50%;
        width: 180px;
    
        height: 80px;
        cursor: pointer;
        font-size: 20px;
        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
    }
    
    button:hover {
        background-color: rgba(255, 255, 255, 1);
    }
    .slider {
        position: relative;
        overflow: hidden; 
        width: 100%; 
        height: 725px; 
    }
    
    .slide {
        display: none;
        position: absolute; 
        width: 100%; 
        height: 100%; 
    }
    
    .slide.active {
        display: block; 
    }
    
    img {
        width: 100%; 
        height: 100%;
        object-fit: cover; 

    }

    .nav-links.active {
        right: 0;
    }

    .nav-links li {
        margin: 2.5rem 0;
    }

    .nav-links a {
        font-size: 1.1rem;
    }

    .navbar .subcontainer {
        width: auto;
    }

    #darkModeToggle {
        margin: 0 auto;
    }
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav-container {
    display: flex;
    align-items: center;
}

.nav-links {
    display: flex;
    gap: 30px;
    margin-right: 20px;
}

#darkModeToggle {
    background-color: transparent;
    border: none;
    color: #fff;
    font-size: 1.2rem;
    cursor: pointer;

    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
}



@media (max-width: 768px) {
    .nav-container {
        flex-direction: row-reverse;

        padding: 10px;
    }
}

.btm-logo {
    width: 20px;
}

.menu-toggle .bar {
    width: 25px;
    height: 3px;
    background-color: white;
    margin: 3px 0;
    transition: 0.4s;
}

@media(max-width: 768px) {
    .menu-toggle {
        display: flex;

    }

    .nav-links {
        position: fixed;
        right: -100%;
        top: 70px;
        flex-direction: column;
        background-color: #092143;
        width: 80%;
        max-width: 300px;
        text-align: center;
        transition: 0.3s;
        box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
        padding: 20px;
        border-radius: 10px 0 0 10px;
        margin-right: 0;
    }

    .nav-links.active {
        right: 0;
    }

    #darkModeToggle {
        margin-right: 20px;
    }

    .about {
        text-align: center;
        padding: 50px 20px;
    }

    .about h2 {
        font-size: 2.5em;
        margin-bottom: 40px;
    }

    .features-container {
        display: flex;
        justify-content: space-between;
        flex-wrap: wrap;
        gap: 20px;

    }

    .feature-box {
        background-color: #f9f9f9;
        border: 1px solid #eee;
        border-radius: 10px;
        padding: 30px;
        width: calc(25% - 20px);
        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
        transition: transform 0.3s ease;
    }

    .feature-box:hover {
        transform: translateY(-10px);
    }

    .feature-box img {
        width: 60px;
        height: 60px;
        margin-bottom: 20px;
    }

    .feature-box h3 {
        font-size: 1.5em;
        margin-bottom: 15px;
    }

    .feature-box p {
        font-size: 1em;
        color: #666;
    }
}


.about {}

.nav-links {
    position: fixed;
    right: -100%;
    top: 70px;
    flex-direction: column;
    background-color: #092143;
    width: 80%;
    max-width: 300px;

    text-align: center;
    padding: 50px 20px;
}

.about h2 {
    font-size: 2.5em;
    margin-bottom: 40px;
}

.features-container {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    gap: 20px;

}

.feature-box {
    background-color: #f9f9f9;
    border: 1px solid #eee;
    border-radius: 10px;
    padding: 30px;
    width: calc(25% - 20px);
    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
    transition: transform 0.3s ease;
}

.feature-box:hover {
    transform: translateY(-10px);
}

.feature-box img {
    width: 60px;
    height: 60px;
    margin-bottom: 20px;
}

.feature-box h3 {
    font-size: 1.5em;
    margin-bottom: 15px;
}

.feature-box p {
    font-size: 1em;
    color: #666;
}


/* Responsive design */
@media (max-width: 1200px) {
    .feature-box {
        width: calc(33.333% - 20px);

    }



}

@media (max-width: 900px) {
    .feature-box {
        width: calc(50% - 20px);

    }
}

@media (max-width: 600px) {
    .feature-box {
        width: 100%;
    }

    .about-us h2 {
        font-size: 2em;
    }
}
}

